[tool.poetry]
name = "ledger"
version = "0.0.1"
description = "Data aggregation for Github contributor metrics."
authors = [
  "Jeremiah Boby <mail@jeremiahboby.me>",
  "Joe Banks <joseph@josephbanks.me>",
  "Xithrius <xithrius@gmail.com>",
]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
schedule = "^0.6.0"
SQLAlchemy = "^1.3.22"
alembic = "^1.4.3"
psycopg2-binary = "^2.8.6"
toml = "^0.10.2"
deepmerge = "^0.1.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.4"
flake8-annotations = "^2.5.0"
flake8-docstrings = "^1.5.0"
flake8-import-order = "^0.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
